...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Night" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8F-wm-IAO">
                                <rect key="frame" x="300" y="24" width="42" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tij-L7-aQL">
                                <rect key="frame" x="212" y="24" width="30" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <segments>
                                    <segment title="Not well or &lt; 8 hrs"/>
                                    <segment title="Slept well"/>
                                </segments>
                                <connections>
...
                                <rect key="frame" x="54.5" y="95" width="266" height="29"/>
                                <segments>
                                    <segment title="Have cold/ill"/>
                                    <segment title="Great!"/>
                                    <segment title="A bit off"/>
                                </segments>
                                <connections>
...
                                <rect key="frame" x="45.5" y="155" width="284" height="29"/>
                                <segments>
                                    <segment title="Super VFR"/>
                                    <segment title="Marginal VFR"/>
                                    <segment title="Not VFR"/>
                                </segments>
                                <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Score)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYv-Lz-ciB">
                                <rect key="frame" x="176" y="542" width="57" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="score"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="54.5" y="217" width="265" height="29"/>
                                <segments>
                                    <segment title="Nothing going right"/>
                                    <segment title="Great day"/>
                                </segments>
                                <connections>
...
                                <rect key="frame" x="67" y="344" width="241" height="29"/>
                                <segments>
                                    <segment title="Rushed to get off"/>
                                    <segment title="No hurry"/>
                                </segments>
                                <connections>
...
                                <segments>
                                    <segment title="Used charts &amp; computer"/>
                                    <segment title="Computer only"/>
                                </segments>
                                <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exercise Caution" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFe-Lw-2b3">
                                <rect key="frame" x="167" y="577" width="128" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="risk"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
